--- a/webApplication(django)/DiaryList(VM)/venv_private_diary/private_diary/diary/templates/diary_detail.html
+++ b/webApplication(django)/DiaryList(VM)/venv_private_diary/private_diary/diary/templates/diary_detail.html
@@ -73,6 +73,9 @@
                 {{ object.updated_at }}
             </div>
         </div>
+        <!-- 編集・削除ボタン -->
+        <a class="btn btn-success mt-5 mb-3" href="{% url 'diary:diary_update' object.pk %}">編集</a>
+        <a class="btn btn-danger mt-5 ml-2 mb-3" href="#">削除</a>
     </div>
 </div>
 {% endblock %}
